# sky-notifier

./: .gitignore  Cargo.toml
src/: commands.rs  constants.rs  extensions.rs  main.rs  responses.rs  types.rs
src/commands/: debug.rs  link.rs
src/responses/: mojang.rs
